# Batch-Messages-Handler

./: README.md  pyproject.toml
backend/: .env.example  .gitignore  app.py  flask_server.py  flask_server.spec.example  sanic_server.py  sanic_server.spec.example
frontend/: .eslintrc.js  package-lock.json  package.json  quasar.config.js
frontend/src/boot/: alertHandler.js
frontend/src/components/: DataField.vue  MailHandler.vue  OperationField.vue  TableColHandler.vue  TableRowHandler.vue  ToggleBtn.vue
frontend/src/css/: app.css
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: ErrorNotFound.vue  IndexPage.vue
frontend/src/stores/: appStatus.js  socket.js
